# lab3-YaPs

./: .gitignore
solution/: CMakeLists.txt
solution/include/: bmp_io_formats.h  exit_codes.h  handle_errors.h  image.h  utils.h
solution/libraries/: bmp_io.h  handle_errors.h  transform.h  utils.h
solution/src/: bmp_io.c  bmp_io_formats.c  handle_errors.c  main.c  transform.c  utils.c
